fixes overflow

--- a/src/components/Stickie/Stickie.css
+++ b/src/components/Stickie/Stickie.css
@@ -1,6 +1,6 @@
 #stickie {
   max-width: 250px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 
